# ShopService

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
common/: db_conn.hpp  dto.hpp  rabbitmq.hpp
frontend/: app.js  index.html
schemas/: init.sql
services/order-service/: CMakeLists.txt
services/order-service/src/: main.cpp  repository.hpp
services/payment-service/: CMakeLists.txt
services/payment-service/src/: main.cpp  repository.hpp
tests/: GozonShop_Tests.postman_collection.json
